J2ME CDC branch has now become the main development branch.
git-svn-id: https://ambienttalk.googlecode.com/svn/interpreter/trunk@424 c0a7138a-1c4d-0410-81cb-3328cd1d7e1d